--- a/index.html
+++ b/index.html
@@ -11,10 +11,18 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
     />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <div class="container-fluid w-75">
-      <h1>Fórmula 1 Schedule 2023</h1>
+      <h1>Formula 1 | 2023 Schedule</h1>
       <div
         class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 my-3"
         id="calendar"
