--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>F1 - Home</title>
     <link rel="stylesheet" href="./style.css" />
-    <script src="./app.js"></script>
+    <link rel="shortcut icon" href="./assets/race.ico" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -29,4 +29,5 @@
       ></div>
     </div>
   </body>
+  <script src="./app.js"></script>
 </html>
