- Añadida una fuente del estilo F1 - Mejorado un poco el responsive - Ahora se muestran ordenados los GP - Cambiado un poco el estilo de la caja

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>F1 - Home</title>
+    <title>F1 - Schedule</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="shortcut icon" href="./assets/race.ico" type="image/x-icon" />
     <link
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div class="container-fluid w-75">
-      <h1>Formula 1 | 2023 Schedule</h1>
+      <h1 class="mb-5">Formula 1 | 2023 Schedule</h1>
       <div
         class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 my-3"
         id="calendar"
